--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "postinstall": "prisma generate",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:start": "docker-compose -f docker-compose.yml up -d",
+    "db:stop": "docker-compose -f docker-compose.yml down"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.5",
