--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint",
     "db:start": "docker-compose -f docker-compose.yml up -d",
     "db:stop": "docker-compose -f docker-compose.yml down",
-    "db:schema": "prisma migrate dev && prisma generate"
+    "db:schema": "prisma migrate dev && prisma generate",
+    "seed": "yarn prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.5",
@@ -51,6 +55,7 @@
     "pretty-quick": "^3.1.3",
     "prisma": "4.4.0",
     "tailwindcss": "^3.1.3",
+    "ts-node": "^10.9.1",
     "typescript": "4.7.4"
   }
 }
