--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/lodash": "^4.14.182",
     "@types/mapbox-gl": "^2.7.3",
     "@types/node": "18.0.0",
+    "@types/random-seed": "^0.3.3",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
@@ -54,6 +55,7 @@
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "prisma": "4.4.0",
+    "random-seed": "^0.3.0",
     "tailwindcss": "^3.1.3",
     "ts-node": "^10.9.1",
     "typescript": "4.7.4"
