--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:stop": "docker-compose -f docker-compose.yml down",
     "db:schema": "prisma migrate dev && prisma generate",
     "seed": "yarn prisma db seed",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -53,6 +54,7 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "husky": "^8.0.0",
+    "jest": "^29.2.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
