--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "envsafe": "^2.0.3",
     "lodash": "^4.17.21",
@@ -41,6 +42,7 @@
     "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
     "react-toastify": "^9.0.4",
+    "styled-components": "^5.3.6",
     "superjson": "^1.9.1",
     "zod": "^3.17.3"
   },
