--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "prisma": "4.4.0",
     "random-seed": "^0.3.0",
     "tailwindcss": "^3.1.3",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "4.7.4"
   }
