--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/react": "^1.6.5",
     "@hookform/resolvers": "^2.9.1",
     "@mui/material": "^5.10.11",
+    "@mui/x-date-pickers": "^5.0.7",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.4.0",
     "@trpc/client": "^9.25.3",
@@ -30,6 +31,7 @@
     "@trpc/server": "^9.25.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.6",
     "envsafe": "^2.0.3",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.9.1",
