--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "prepare": "husky install",
     "test": "jest",
     "vercel-build": "./vercel.sh",
-    "build:preview": "prisma generate && echo \"y\" | echo \"y\" | prisma db push && next build",
+    "build:preview": "prisma generate && echo \"y\" | prisma db push && next build",
     "build:main": "prisma generate & next build",
-    "startup": "docker-compose -f docker-compose.yml up -d && next dev"
+    "startup": "yarn db:start && next dev"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
