--- a/.github/workflows/auto-comment.yml
+++ b/.github/workflows/auto-comment.yml
@@ -1,5 +1,7 @@
 name: Auto Comment
 on: [issues, pull_request]
+paths:
+  - prisma/**
 jobs:
   run:
     runs-on: ubuntu-latest
@@ -9,5 +11,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           pullRequestOpened: |
             👋 @{{ author }}
-            If your PR contains any changes to the schema.prisma file, please open a deploy request on 
-            PlanetScale before merging. If you have any questions, ping @lukejianu on Slack.
+            Looks like your PR might contain changes to the schema.prisma file. Please open a deploy request on PlanetScale before merging. If you have any questions, ping @lukejianu on Slack.
