--- a/.github/workflows/auto-comment.yml
+++ b/.github/workflows/auto-comment.yml
@@ -1,7 +1,6 @@
 name: Auto Comment
 on: [issues, pull_request]
-paths:
-  - prisma/**
+paths: [prisma/**]
 jobs:
   run:
     runs-on: ubuntu-latest
