--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "prisma": "4.4.0",
+    "prisma": "^4.14.1",
     "random-seed": "^0.3.0",
     "tailwindcss": "^3.1.3",
     "ts-jest": "^29.0.3",
