--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,6 @@ jobs:
       - name: install node v18.16
         uses: actions/setup-node@v1
         with:
-          node-version: "18.16.0"
+          node-version: 18.16
       - run: yarn install
       - run: yarn test
