--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: install node v16.17
+      - name: install node v18.16
         uses: actions/setup-node@v1
         with:
-          node-version: "16.17"
+          node-version: 18.16
       - run: yarn install
       - run: yarn test
