--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.378.0",
     "@aws-sdk/client-ses": "^3.363.0",
     "@aws-sdk/credential-provider-env": "^3.363.0",
     "@emotion/react": "^11.10.5",
