--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "^12.2.4",
     "next-auth": "^4.22.1",
     "node-fetch": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.32.2",
