--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@emotion/styled": "^11.10.5",
     "@headlessui/react": "^1.6.5",
     "@hookform/resolvers": "^2.9.1",
+    "@mapbox/polyline": "^1.2.0",
     "@mui/material": "^5.10.11",
     "@mui/x-date-pickers": "^5.0.7",
     "@next-auth/prisma-adapter": "^1.0.3",
@@ -67,6 +68,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "@types/geojson": "^7946.0.8",
     "@types/lodash": "^4.14.182",
+    "@types/mapbox__polyline": "^1.0.2",
     "@types/mapbox-gl": "^2.7.3",
     "@types/node": "18.0.0",
     "@types/random-seed": "^0.3.3",
