--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "vercel-build": "./vercel.sh",
     "build:preview": "prisma generate && echo \"y\" | prisma db push && next build && yarn prisma db seed",
     "build:main": "prisma generate & next build",
-    "startup": "yarn db:start && next dev"
+    "startup": "yarn db:start && next dev",
+    "build:development": "NODE_ENV=development prisma generate & next build",
+    "build:production": "NODE_ENV=production prisma generate & next build"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
