--- a/package.json
+++ b/package.json
@@ -69,9 +69,9 @@
     "@tailwindcss/forms": "^0.5.2",
     "@types/geojson": "^7946.0.8",
     "@types/lodash": "^4.14.182",
-    "@types/mapbox__polyline": "^1.0.2",
     "@types/mapbox-gl": "^2.7.3",
-    "@types/node": "18.0.0",
+    "@types/mapbox__polyline": "^1.0.2",
+    "@types/node": "^22.1.0",
     "@types/random-seed": "^0.3.3",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
@@ -88,6 +88,6 @@
     "tailwindcss": "^3.1.3",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "4.7.4"
+    "typescript": "^5.5.4"
   }
 }
