--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@headlessui/react": "^1.6.5",
     "@hookform/resolvers": "^2.9.1",
     "@mapbox/polyline": "^1.2.0",
+    "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.10.11",
     "@mui/x-date-pickers": "^5.0.7",
     "@next-auth/prisma-adapter": "^1.0.3",
@@ -71,8 +72,8 @@
     "@tailwindcss/forms": "^0.5.2",
     "@types/geojson": "^7946.0.8",
     "@types/lodash": "^4.14.182",
-    "@types/mapbox__polyline": "^1.0.2",
     "@types/mapbox-gl": "^2.7.3",
+    "@types/mapbox__polyline": "^1.0.2",
     "@types/node": "18.0.0",
     "@types/random-seed": "^0.3.3",
     "@types/react": "18.0.14",
