--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.378.0",
+    "@aws-sdk/client-s3": "^3.651.1",
     "@aws-sdk/client-ses": "^3.363.0",
     "@aws-sdk/credential-provider-env": "^3.363.0",
+    "@aws-sdk/s3-request-presigner": "^3.651.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@headlessui/react": "^1.6.5",
@@ -47,6 +49,7 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^5.5.2",
     "axios": "^0.27.2",
+    "cropperjs": "^1.6.2",
     "dayjs": "^1.11.6",
     "envsafe": "^2.0.3",
     "lodash": "^4.17.21",
@@ -70,6 +73,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
+    "@types/cropperjs": "^1.3.0",
     "@types/geojson": "^7946.0.8",
     "@types/lodash": "^4.14.182",
     "@types/mapbox-gl": "^2.7.3",
