--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "antd": "^5.5.2",
     "axios": "^0.27.2",
     "cropperjs": "^1.6.2",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.6",
     "envsafe": "^2.0.3",
     "lodash": "^4.17.21",
