--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-toastify": "^9.0.4",
     "styled-components": "^5.3.6",
     "superjson": "^1.9.1",
+    "tailwind-scrollbar": "^3.1.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
