--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.9.1",
     "material-ui": "^0.20.2",
+    "mixpanel-browser": "^2.55.1",
     "next": "^12.2.4",
     "next-auth": "^4.22.1",
     "node-fetch": "^3.3.1",
