--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,5 @@ jobs:
         with:
           node-version: 18.16
       - run: yarn install
-      - run: yarn test
+      - run: yarn test --passWithNoTests
+
