--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^5.5.2",
     "axios": "^0.27.2",
-    "cropperjs": "^1.6.2",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.6",
     "envsafe": "^2.0.3",
@@ -63,6 +62,7 @@
     "prettier-plugin-tailwindcss": "^0.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-easy-crop": "^5.1.0",
     "react-hook-form": "^7.32.2",
     "react-icons": "^5.3.0",
     "react-infinite-scroll-component": "^6.1.0",
