--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "@trpc/react-query": "^10.33.0",
     "@trpc/server": "^10.33.0",
     "@types/styled-components": "^5.1.26",
-    "antd": "^5.5.2",
+    "antd": "^5.22.1",
     "axios": "^0.27.2",
     "date-fns": "^4.1.0",
-    "dayjs": "^1.11.6",
+    "dayjs": "1.11.13",
     "envsafe": "^2.0.3",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.9.1",
