--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "@prisma/client": "^4.4.0",
     "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.29.19",
-    "@trpc/client": "^10.33.0",
+    "@trpc/client": "^10.45.2",
     "@trpc/next": "^10.33.0",
-    "@trpc/react": "^9.25.3",
+    "@trpc/react": "^9.27.4",
     "@trpc/react-query": "^10.33.0",
-    "@trpc/server": "^10.33.0",
+    "@trpc/server": "^10.45.2",
     "@types/styled-components": "^5.1.26",
     "antd": "^5.22.1",
     "axios": "^0.27.2",
@@ -60,8 +60,10 @@
     "next-auth": "^4.22.1",
     "node-fetch": "^3.3.1",
     "prettier-plugin-tailwindcss": "^0.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "rc-picker": "^4.8.1",
+    "rc-trigger": "^5.3.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-easy-crop": "^5.1.0",
     "react-hook-form": "^7.32.2",
     "react-icons": "^5.3.0",
