--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^5.22.1",
     "axios": "^0.27.2",
+    "chart.js": "^4.4.6",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-zoom": "^2.2.0",
     "date-fns": "^4.1.0",
     "dayjs": "1.11.13",
     "envsafe": "^2.0.3",
@@ -63,6 +66,7 @@
     "rc-picker": "^4.8.1",
     "rc-trigger": "^5.3.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.1.0",
     "react-hook-form": "^7.32.2",
